[package]
name = "thumbnails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt   = "0.3.26"
rayon       = "1.8.0"
tokio       = {version = "1.34.0", features = ["macros", "rt-multi-thread", "io-util", "process", "parking_lot", "fs"] }
thiserror   = "1.0.50"
image       = {version = "0.24.7", features = ["jpeg", "png", "webp", "tiff"] }
