[package]
name = "thumbnails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt     = "0.3.26"
thiserror     = "1.0.50"
image         = {version = "0.24.7", features = ["tiff", "jpeg", "webp"] }
rayon         = "1.8.0"
smol          = "1.3.0"
num_cpus      = "1.16.0"